5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1585_2895.log
== TEST (2019-03-21 11:40:49) 
-- CODE:
Njg= int(input("quantidade de jogos a serem encomendados:"))
valorjg = int(input("valor do jogo:"))
frete = int(input("valor do frete:"))
 valor = (Njg + valorjg + frete)
	print(valor)
-- ERROR:
File "XXXX", line 4
    valor = (Njg + valorjg + frete)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:41:31) 
-- CODE:
Njg = int(input("quantidade de jogos a serem encomendados:"))
valorjg = int(input("valor do jogo:"))
frete = int(input("valor do frete:"))
 
	valor = (Njg + valorjg + frete)
	
	print(valor)
-- ERROR:
File "XXXX", line 5
    valor = (Njg + valorjg + frete)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:23) 
-- CODE:
Njg = int(input("quantidade de jogos a serem encomendados:"))
valorjg = int(input("valor do jogo:"))
frete = int(input("valor do frete:"))
 
	valor = Njg + valorjg + frete
	
	print(valor)
-- ERROR:
File "XXXX", line 5
    valor = Njg + valorjg + frete
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:28) 
-- CODE:
Njg = int(input("quantidade de jogos a serem encomendados:"))
valorjg = int(input("valor do jogo:"))
frete = int(input("valor do frete:"))
 
valor = Njg + valorjg + frete
	
	print(valor)
-- ERROR:
File "XXXX", line 7
    print(valor)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:59) 
-- CODE:
var1 = int(input("quantidade de jogos a serem encomendados:"))
var2 = float(input("valor do jogo:"))
var3 = float(input("valor do frete:"))
 
valor = var1 + var2 + var3
	
	print(valor)
-- ERROR:
File "XXXX", line 7
    print(valor)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:30) 
-- CODE:
var1 = int(input("quantidade de jogos a serem encomendados:"))
var2 = float(input("valor do jogo:"))
var3 = float(input("valor do frete:"))
 
valor = var1 + var2 + var3
	
	print(valor)
-- ERROR:
File "XXXX", line 7
    print(valor)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:45) 
-- CODE:
var1 = int(input("quantidade de jogos a serem encomendados:"))
var2 = float(input("valor do jogo:"))
var3 = float(input("valor do frete:"))
 
valor = var1 + var2 + var3
	
print(valor)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:06) 
-- CODE:
var1 = int(input("quantidade de jogos a serem encomendados:"))
var2 = float(input("valor do jogo:"))
var3 = float(input("valor do frete:"))
 
valor = var1 + var2 + var3
	
print(valor)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:39) 
-- CODE:
var1 = int(input("quantidade de jogos a serem encomendados:"))
var2 = float(input("valor do jogo:"))
var3 = float(input("valor do frete:"))
 
valor = var1 + (var2 * var3)
	
print(valor)
-- OUTPUT:
3522.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:54) 
-- CODE:
var1 = int(input("quantidade de jogos a serem encomendados:"))
var2 = float(input("valor do jogo:"))
var3 = float(input("valor do frete:"))
 
valor = var1 + (var2 * var3)
	
print(valor)
-- OUTPUT:
3522.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:00) 
-- CODE:
var1 = int(input("quantidade de jogos a serem encomendados:"))
var2 = float(input("valor do jogo:"))
var3 = float(input("valor do frete:"))
 
valor = (var1 * var2) + var3
	
print(valor)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:48:14) 
-- CODE:
var1 = int(input("quantidade de jogos a serem encomendados:"))
var2 = float(input("valor do jogo:"))
var3 = float(input("valor do frete:"))
 
valor = (var1 * var2) + var3
	
print(valor)
-- EXECUTION TIME:
0.113133
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
